2014-05-10 John Wu <John dot Wu at ACM dot org>
	* src/index.h: move printHeader to be a public static member
	function
	* src/ibin.cpp: check whether col is nil before use
	* src/column.h: move template functions for computing min and max
	to be static member functions

2014-05-09 John Wu <John dot Wu at ACM dot org>
	* src/index.cpp: change index::create to separate out the portion
	about reading an existing index, allow c=0 in this case

2014-04-29 John Wu <John dot Wu at ACM dot org>
	* src/ibin.cpp: in bin::parsePrec, change the default precision to
	2 digits; in constructors of ibis::bin, change index spec of nil
	pointer, empty string, "automatic" or "default" to invoke
	mapGranule, which effectively means <binning precision=2/>

2014-04-14 John Wu <John dot Wu at ACM dot org>
	* src/index.cpp: regenerate empty bitmaps when reading from a file
	(the changes on 4/10 neglected some branches of the activate functions)

2014-04-11 John Wu <John dot Wu at ACM dot org>
	* src/array_t.cpp: in function reserve, add call to memset to put
	0 in the newly allocated memory
	* configure.ac: add --with-debug=d to control -DDEBUG option in
	Makefiles (per discussion with Alex Romosan)

2014-04-10 John Wu <John dot Wu at ACM dot org>
	* examples/tiapi.c: add initialization for nmax and msglvl
	* src/index.cpp: regenerate an in-memory bitvector (of all 0s)
	when the index file does not record anything for the bitvector

2014-04-10 Zhongbo Tian <windreamer at gmail dot com>
	* src/bord.cpp: add code to handle string valued column
	(in-memory) without a dictionary
	* src/mensa.cpp: remove call to getValuesArray on string-valued
	columns

2014-04-08 John Wu <John dot Wu at ACM dot org>
	* src/iapi.h, src/iapi.cpp: rename the public functions of IAPI to
	be more consistent, fix a couple of obvious bugs in iapi.cpp

2014-04-07 John Wu <John dot Wu at ACM dot org>
	* runconfig: add entry for edison, determined that intel CC can
	not support std::unique_ptr, have to use GNU CC
